manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: petisl-notification
  name: petisl-notification
  namespace: dev
spec:
  replicas: 2
  minReadySeconds: 45
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: petisl-notification
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: petisl-notification
    spec:
      containers:
      - env:
        - name: TZ
          value: Africa/Lagos
        image: <IMAGE>
        imagePullPolicy: Always
        name: petisl-notification
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
