manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: petisl-notification
  name: petisl-notification
spec:
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 8087
  selector:
    app: petisl-notification
