manifests/ingress-https.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-petisl-notification
spec:
  rules:
    - host: api-test.notification.petisl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petisl-notification
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-petisl-notification
  annotations:
   cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
   - hosts:
     - api-test.notification.petisl.com
     secretName: letsencrypt-nginx-notification
  rules:
    - host: api-test.notification.petisl.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petisl-notification
                port:
                  number: 443
  ingressClassName: nginx
