manifests/nginx-https-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-leasing-notification
spec:
  rules:
    - host: staging.notification.hrm.c-ileasing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leasing-notification
                port:
                  number: 8080
  ingressClassName: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-leasing-notification
  annotations:
   cert-manager.io/issuer: letsencrypt-nginx
spec:
  tls:
   - hosts:
     - staging.notification.hrm.c-ileasing.com
     secretName: letsencrypt-nginx-notification
  rules:
    - host: staging.notification.hrm.c-ileasing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: leasing-notification
                port:
                  number: 443
  ingressClassName: nginx
